--- a/WEB projektfeladat/index.html
+++ b/WEB projektfeladat/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Programozáselmélet</h1>
+        <h1><img id="cimkep" src="Pictures/cimkep.png"> Programozáselmélet <img id="cimkep" src="Pictures/cimkep.png"></h1>
         <nav>
             <a class="nonactive active" id="navkezdo" href="#">Kezdőlap</a>
             <a class="nonactive" id="navalgoritmus" href="#">Algoritmus</a>
@@ -196,6 +196,7 @@
             </code></div>
         </div></section>
     <section id="nyelvek" hidden><p>Ugyanúgy mint a természetes nyelveknél, az idők folyamán nagyon sok programozási nyelv alakult ki. Amint a neve is sugallja, egy programozási nyelv egy adott programnak a forráskódjának a nyelvét értjük, amiben a program fejlesztője írta a programot. A programozási nyelveket is nagyon sok féle szempont alapján lehet csoportosítani. A két fő típus az alacsonyszíntű, és a magas-szintű nyelvek. Egy nyelv alacson szintű, ha a programozás közben jelentősen hardveres, és nem szoftveresen valósítjuk meg a programot. Napjainkban ezek a nyelvek már elavultak, és a helyüket átvetták a magas-szintű nyelvek, a könnyeb programozás érdekében. A magas-szintű nyelveknél nincs szükség hardveres beavatkozásra, a kódolás teljesen szoftveresen valósul meg. A magas-szintű nyelveknek a leggyakoribb típusai az Objektum Orientált, prototípus alapúak, és a szkript nyelvek, de vannak grafikai típusuak, melyekkel egy grafikus felületen is tudunk kódolni. Ezenkívül még ismeretes a struktúrált, és procedurális nyelvek.</p>
+        <div style="overflow-x:scroll">
         <table>
             <tr><td colspan="4">Nyelvek</td></tr>
             <tr><td colspan="2">Természetes</td><td colspan="2">Mesterséges</td></tr>
@@ -207,6 +208,7 @@
             <td>Alacsony szintű</td>
             <td>Magas szintű</td></tr>
         </table>
+    </div>
         <p>A leggyakrabban használt programozási nyelvek</p>
         <h2><img src="Pictures/Python.png" alt="Python logo" title="Python logo"> Python</h2>
         <p>A Python egy magas-szintű általános célú programozáis nyelv. Szintaxisa, és a típusfüggetlensége miatt ajánlott kezdő programozóknak.</p>
